Gap fix

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -73,7 +73,7 @@ main {
 			z-index: -50;
 			background: #1e2024;
 			position: absolute;
-			height: 100%;
+			height: 101%;
 			width: 100%;
 		}
 		.head-panel-logos {
